--- a/SocialLogin/SocialLogin/MainPage.xaml
+++ b/SocialLogin/SocialLogin/MainPage.xaml
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SocialLogin"
              x:Class="SocialLogin.MainPage">
-
-    <StackLayout>
-        <Button Text="Conectar Facebook"
+    <ContentPage.Content>
+        <StackLayout>            
+                <Button Text="Conectar Facebook"
                 BackgroundColor="Blue"
                 FontSize="Medium"
                 TextColor="White"
                 x:Name="LoginButton"
+                Command="{Binding LoginCommand}"
                 />
-        <Label TextColor="Black"
+                <Label TextColor="Black"
                FontSize="Medium"
-               x:Name="InfoLabel"/>
-    </StackLayout>
+               x:Name="InfoLabel"
+               Text="{Binding Label}"/>
 
+                <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"/>
+            </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
